--- a/styles/bangladesh.css
+++ b/styles/bangladesh.css
@@ -80,6 +80,7 @@ body{
     margin: 0px 150px;
     display: block;
     align-items: center;
+    background-color: ;
 }
 
 /* 2. The Vision of Future */
@@ -163,4 +164,75 @@ body{
 }
 
 
+/* 3. Recent News */
 
+.recent-news{
+    margin-top: 80px;
+}
+
+.news-type{
+    font-size: 40px;
+    color: #0E0E0E;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+    margin: 0;
+}
+
+.news-list{
+    display: flex;
+    border: 1px bold none;
+    background-color: #FFFFFF;
+    padding: 48px;
+    column-gap: 32px;
+
+}
+
+.news-list2{
+    display: flex;
+    flex-direction: row-reverse;
+    border: 1px bold none;
+    background-color: #FFFFFF;
+    padding: 48px;
+    column-gap: 32px;
+}
+
+
+.img-satellite{
+    border: 1px solid none;
+    border-radius: 24px;
+    opacity: 100%;
+}
+
+
+.news-tittle{
+    font-size: 32px;
+    font-weight: 800;
+    margin: 0;
+}
+
+.news-detail{
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.7);
+
+}
+
+.date-time{
+    margin: 12px 0px;
+
+}
+
+.btn-readmore{
+    background-color: #006A50;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 11px;
+    border: none;
+    border-radius: 8px;
+    margin-top: 32px;
+}
+
+.news-folder{
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px;
+    margin-bottom: 80px;
+}
