--- a/styles/bangladesh.css
+++ b/styles/bangladesh.css
@@ -232,7 +232,58 @@ body{
 }
 
 .news-folder{
-    border: 1px solid rgba(0, 0, 0, 0.25);
-    box-shadow: 0px 4px 4px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 80px;
+}
+
+/* 04. Donate Today */
+
+.donate{
+    align-items: center;
+    text-align: center;
+    /* padding: 0px 32px 0px 32px; */
+}
+
+.donate-preset{
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-around;
+    width: 243;
+    padding: 40px 40px;
+}
+
+.donate-amount {
+    padding: 40px 40px;
+    border: none; 
+    border-radius: 5px;
+    font-weight: 800;
+    font-size: large;
+    background-color: #f0f0f0; 
+    text-align: center;
+    cursor: pointer;
+}
+
+.other-amount{
+    border: none;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    width: 80%;
+    height: 40%;
+    text-align: center;
+    padding: 19px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.btn-donate{
+    background-color: #006A50;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 17px 34px;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 80px;
+    
 }
