--- a/styles/bangladesh.css
+++ b/styles/bangladesh.css
@@ -242,28 +242,43 @@ body{
 .donate{
     align-items: center;
     text-align: center;
-    /* padding: 0px 32px 0px 32px; */
+    align-content: center;
+    padding: 0px 32px 0px 32px;
+    width: ;
 }
+
 
 .donate-preset{
     display: flex;
     gap: 50px;
     align-items: center;
     justify-content: space-around;
-    width: 243;
+    /* width: 243; */
     padding: 40px 40px;
 }
 
 .donate-amount {
+    /* display: inline-block; */
     padding: 40px 40px;
-    border: none; 
+    /* padding: 15px 25px; */
+    /* border: 0.5px; */
+    /* border-top: 0.5px; */
+    border: 1px solid #ccc;
     border-radius: 5px;
     font-weight: 800;
     font-size: large;
-    background-color: #f0f0f0; 
+    background-color: rgba(255, 255, 255, 1);
     text-align: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+
 }
+
+
+.donate-amount:hover {
+    background-color: #e0e0e0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+  }
 
 .other-amount{
     border: none;
@@ -287,3 +302,4 @@ body{
     margin-bottom: 80px;
     
 }
+
