--- a/styles/bangladesh.css
+++ b/styles/bangladesh.css
@@ -303,3 +303,13 @@ body{
     
 }
 
+
+.subscribtion{
+    border: 1px solid;
+    margin-bottom: 80px;
+    align-items: center;
+    align-content: center;
+
+
+}
+
